# fastapi_backend

./: .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
alembic/: env.py  script.py.mako
alembic/versions/: 8f3ae3efc339_init.py  9a1b2c3d4e5f_add_family_invites.py  cc2d233b2821_初始化.py  d2e3f4a5b6c7_add_food_family_and_nutrition_preferences.py  f1a2b3c4d5e6_add_family_tables.py
app/: main.py
app/auth/: backend.py  dependencies.py  model.py  models.py  repository.py  router.py  schema.py  schemas.py  service.py  user_manager.py
app/core/: base_model.py  config.py  database.py  exception.py  lifespan.py  models.py  security.py
app/families/: __init__.py  model.py  repository.py  router.py  schema.py  service.py
app/foods/: model.py  repository.py  router.py  schema.py  service.py
app/nutrition/: model.py  repository.py  router.py  schema.py  service.py
app/profiles/: model.py  repository.py  router.py  schema.py  service.py
app/reminders/: model.py  repository.py  router.py  schema.py  service.py
app/users/: __init__.py  dependencies.py  model.py  repository.py  router.py  schema.py  service.py  user_manager.py
app/weights/: model.py  repository.py  router.py  schema.py  service.py
tests/: conftest.py  test_auth.py  test_exceptions.py  test_family_model.py  test_family_routes.py  test_lifespan.py  test_module_balance.py  test_profile_repo_repoutil.py  test_profile_repository.py  test_repo.py  test_repo_util.py  test_routers.py  test_security.py
